--- a/Dashboard/css/emo_cards.css
+++ b/Dashboard/css/emo_cards.css
@@ -10,14 +10,16 @@
     color:var(--emo-card-color);
     border-radius: 10px;
     box-shadow: var(--emo-card-shadowbox);
+    margin:0.5rem;
 }
+
 
 .canv-container >img {
     position: absolute;
-    height: 108px;
-    width: 105px;
-    top: 39%;
-    left: 38%;
+    height: 87px;
+    width: 80px;
+    top: 40%;
+    left: 39%;
     bottom: 0;
     right: 0;
 }
@@ -27,9 +29,9 @@
   }
   
   .like_img{
-    width:70px;
-    height:70px;
-    left: 41%;
+    width: 70px !important;
+    height: 70px !important;
+    left: 40% !important;
   }
   .canv-container h4{
       font-size: 1.56rem;
@@ -57,6 +59,9 @@
         align-items: center;
         justify-content: space-between;
         flex-shrink: 3;
+    }
+    .canv-container{
+        margin-right: 1rem;
     }
     
     }
