--- a/Dashboard_chart_js/css/chart.css
+++ b/Dashboard_chart_js/css/chart.css
@@ -47,48 +47,26 @@
 }
 
 .select{
-    position: relative;
-    display: block;
+    
     max-width: 400px;
     min-width: 180px;
-    margin: 0 auto;
+    
+    margin: 1em auto;
     border: 1px solid inherit;
-    background-color: #ffffff1d;
-    z-index: 10;
+    border-radius: 0.5em;
+       
+    
     transition: all 150ms ease;
+    /*padding: 12px 45px 15px 15px;*/
+    padding: 1em 1em 1em 1em;
+    font-size: 14px;
+    
 }
 .select:hover{
     opacity: 0.7;
 }
-.select select, .select input {
-    border: none;
-    outline: none;
-    background: transparent;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0;
-    margin: 0;
-    display: block;
-    width: 100%;
-    padding: 12px 55px 15px 15px;
-    font-size: 14px;
-    color: inherit;
-  }
-  .vid_select:after {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 50px;
-    height: 100%;
-    line-height: 38px;
-    content: "v";
-    text-align: center;
-    color: inherit;
-    font-size: 24px;
-    border-left: 1px solid inherit;
-    z-index: -1;
-  }
+
+
 /* end select area*/
 
 
@@ -99,6 +77,7 @@
     }
     .selects_container{
         flex-direction: column;
+        text-align: end;
     }
 
     .left_disposition, .chart_title{
